2010-03-05  Miguel de Dios  <miguel.dedios@artica.es>

	* pandoradb_data.sql: changed some the descriptions text of table
	type modules. 

2010-03-05  Miguel de Dios  <miguel.dedios@artica.es>

	Merged from trunk:
	
	* godmode/agentes/module_manager_editor_common.php: fix the type for when
	ajax load by form editor in modules policies.
	
2010-02-25  Sancho Lerena <slerena@artica.es>

	* include/functions_ui.php: Show default actions in alerts.

	* godmode/alerts/alert_list.php: Show default actions in alerts.

	* include/functions_reporting.php: Fixed bad count of Unknown modules.

	* godmode/alerts/configure_alert_template.php,
	godmode/alerts/alert_templates.php,
	godmode/alerts/configure_alert_action.php,
	godmode/alerts/alert_actions.php: Show/Edit group for templates and actions.

2010-02-22  Miguel de Dios  <miguel.dedios@artica.es>

	Merged from trunk:
	
	* include/functions_alerts.php: fix when try delete only the alerts from
	alert policies form. 

2010-02-20  Sancho Lerena <slerena@artica.es>

        * godmode/setup/setup.php: Fixed bug #2952636, thanks Junichi for the 
        patch.


2010-02-20  Sancho Lerena <slerena@artica.es>

	* include/gettext.php: Applied patch to solve problem in 64bit systems
	Thanks Junichi!.

2010-02-18  Raul Mateos <raulofpandora@gmail.com>
	* extensions/module_groups.php: Better description text. Changed font
        colour.

2010-02-18  Sancho Lerena <slerena@artica.es>

	* pandora_console/include/functions_reporting.php: Fixed a problem
	in enterprise PDF reports.

2010-02-12  Raúl Mateos <raulofpandora@gmail.com>

	* include/config_process.php: Fix date. Updated build.

	* Changelog: Small fixes.

2010-02-10  Sancho Lerena <slerena@artica.es>

	* include/help/es/help_alert_macros.php: Updated macro help.

	* include/config_process.php: Updated build. Better log management.

	* include/functions_fsgraph.php: removed a few blank lines.

	* godmode/setup/file_manager.php: Added support to delete files.
