@@ -55,6 +55,13 @@ function dbmgr_extension_main () {
 
 	$sql = (string) get_parameter ('sql');
 
+    global $config;
+    if (! give_acl ($config['id_user'], 0, "PM") && ! is_user_admin ($config['id_user'])) {
+	    audit_db ($config['id_user'], $REMOTE_ADDR, "ACL Violation", "Trying to access Setup Management");
+	    require ("general/noaccess.php");
+	    return;
+    }
+
 	echo "<h2>".__('Extensions'). " &raquo; ".__('Database interface')."</h2>";
 	echo '<div class="notify">';
 	echo "This is an advanced extension to interface with Pandora FMS database directly from WEB console using native SQL sentences. Please note that <b>you can damage</b> your Pandora FMS installation if you don't know </b>exactly</b> what are you doing, this means that you can severily damage your setup using this extension. This extension is intended to be used <b>only by experienced users</b> with a depth knowledgue of Pandora FMS internals.";
